--- a/src/components/home/homeStyles.scss
+++ b/src/components/home/homeStyles.scss
@@ -1,28 +1,17 @@
 @use '../../stylesUtils/colors';
-@use '../../stylesUtils/fontsizes';
 
-h1 {
-    color: colors.$green;
-    font-weight: 700;
-    margin-top: 0;
-}
-
-.loginPage {
+.homePage {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100%;
 }
 
-.loginBackground {
+.homeBackground {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     flex:1;
     background-color: colors.$grey;
-}
-
-.loginForm {
-    display: block;
 }
