feat: added authentication

--- a/src/components/commons/buttonStyle.scss
+++ b/src/components/commons/buttonStyle.scss
@@ -8,6 +8,7 @@ button {
     border-color: colors.$green;
     color: colors.$green;
     border-radius: 6px;
+    cursor: pointer;
 }
 
 button:hover {
