--- a/src/stylesUtils/colors.scss
+++ b/src/stylesUtils/colors.scss
@@ -1,8 +1,8 @@
 $darkGrey: #555555;
 $grey: #6F6F6F;
 $lightGrey: #ABABAB;
-$darkGreen: #256824;
-$green: #399E37;
-$lightGreen: #4DD74A;
+$darkGreen: #1e531d;
+$green: #3cbe3a;
+$lightGreen: #4aef47;
 $darkRed: #B72A2A;
 $lightRed: #F24343;
