--- a/src/stylesUtils/fontsizes.scss
+++ b/src/stylesUtils/fontsizes.scss
@@ -1,4 +1,6 @@
-$xSmall: 15px;
-$small: 18px;
-$medium: 30px;
+$xXSmall: 15px;
+$xSmall: 18px;
+$small: 20px;
+$medium: 24px;
 $large: 55px;
+$xLarge: 80px;
