--- a/src/components/commons/buttonStyle.scss
+++ b/src/components/commons/buttonStyle.scss
@@ -22,13 +22,19 @@ button:hover {
     gap: 10px;
 }
 
+.largeButton {
+    padding: 10px;
+    margin-bottom: 10px;
+    font-size: fontsizes.$medium;
+}
+
 .mediumButton {
     padding: 10px;
     margin-bottom: 10px;
-    font-size: fontsizes.$small;
+    font-size: fontsizes.$xSmall;
 }
 
 .smallButton {
     padding: 4px;
-    font-size: fontsizes.$xSmall;
+    font-size: fontsizes.$xXSmall;
 }
