--- a/src/stylesUtils/colors.scss
+++ b/src/stylesUtils/colors.scss
@@ -2,6 +2,7 @@ $darkGrey: #555555;
 $grey: #6F6F6F;
 $lightGrey: #ABABAB;
 $darkGreen: #1e531d;
+$dimmGreen: #276b26;
 $green: #3cbe3a;
 $lightGreen: #4aef47;
 $darkRed: #B72A2A;
