--- a/src/components/commons/boardStyle.scss
+++ b/src/components/commons/boardStyle.scss
@@ -1,8 +1,8 @@
 @use '../../stylesUtils/colors.scss';
 
 .square {
-    height: 40px;
-    width: 40px;
+    height: 9.5%;
+    width: 9.5%;
     background-color: transparent;
     border: 1px solid;
     border-color: colors.$darkGreen;
@@ -10,6 +10,8 @@
 }
 
 .positionBoard {
-    height: 400px;
-    width: 400px;
+    height: 500px;
+    width: 500px;
+    display: flex;
+    flex-wrap: wrap;
 }
