--- a/src/components/game/gameStyle.scss
+++ b/src/components/game/gameStyle.scss
@@ -14,6 +14,14 @@
     justify-content: center;
     flex:1;
     background-color: colors.$grey;
+
+    ul {
+        list-style-type: none;
+        display: flex;
+        flex-wrap: wrap;
+        max-width: 250px;
+        padding-right: 10px;
+    }
 }
 
 .listContainer {
