--- a/src/components/commons/boardStyle.scss
+++ b/src/components/commons/boardStyle.scss
@@ -15,3 +15,18 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+.smallPositionBoard {
+    height: 400px;
+    width: 400px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shot {
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
+    border: solid 2px;
+    background-color: transparent;
+}
