added fire screen

--- a/src/components/game/gameStyle.scss
+++ b/src/components/game/gameStyle.scss
@@ -35,12 +35,12 @@ h4 {
     color: colors.$green
 }
 
-.positioningWrapper {
+.horizontalWrapper {
     display: flex;
     gap: 10px;
 }
 
-.positioningBackground {
+.verticalBackground {
     display: flex;
     flex-direction: column;
     align-items: center;
