--- a/src/components/commons/boardStyle.scss
+++ b/src/components/commons/boardStyle.scss
@@ -6,7 +6,6 @@
     background-color: transparent;
     border: 1px solid;
     border-color: colors.$darkGreen;
-    opacity: 0.5;
 }
 
 .positionBoard {
@@ -26,6 +25,8 @@
 .shot {
     width: 20px;
     height: 20px;
+    margin-left: 6px;
+    margin-top: 8px;
     border-radius: 100%;
     border: solid 2px;
     background-color: transparent;
