--- a/src/components/commons/ship.scss
+++ b/src/components/commons/ship.scss
@@ -6,5 +6,6 @@
     border: 2px solid;
     border-color: colors.$green;
     border-radius: 10%;
-    z-index: 10;
+    z-index: 1000;
+    background-color: colors.$grey;
 }
