--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@use './stylesUtils/fontSizes.scss';
+//@use './stylesUtils/fontSizes.scss';
 @import 'https://fonts.googleapis.com/css?family=Poppins:300,400,600,700';
 
 * {
@@ -10,18 +10,18 @@ font-family: 'Poppins';
 }
 
 h1 {
-  font-size: fontSizes.$xLarge;
+  font-size: 50px;
 }
 
 h2 {
-  font-size: fontSizes.$large;
+  font-size: 50px;
 }
 
 h3 {
-  font-size: fontSizes.$medium;
+  font-size: 50px;
 }
 
 h4 {
-  font-size: fontSizes.$small;
+  font-size: 50px;
 }
 
