--- a/src/components/game/gameStyle.scss
+++ b/src/components/game/gameStyle.scss
@@ -13,6 +13,7 @@
     align-items: center;
     justify-content: center;
     flex:1;
+    gap: 40px;
     background-color: colors.$grey;
 
     ul {
