--- a/src/stylesUtils/colors.scss
+++ b/src/stylesUtils/colors.scss
@@ -1,8 +1,9 @@
+$darkerGrey: #393939;
 $darkGrey: #555555;
 $grey: #6F6F6F;
 $lightGrey: #ABABAB;
 $darkGreen: #1e531d;
-$dimmGreen: #276b26;
+$dimmGreen: #379735;
 $green: #3cbe3a;
 $lightGreen: #4aef47;
 $darkRed: #B72A2A;
