--- a/src/components/game/gameStyle.scss
+++ b/src/components/game/gameStyle.scss
@@ -36,6 +36,10 @@ h4 {
     color: colors.$green
 }
 
+.light-label {
+    color: colors.$green,
+}
+
 .waiting-label {
     font-weight: bold;
     color: colors.$green,
