--- a/src/components/login/loginStyles.scss
+++ b/src/components/login/loginStyles.scss
@@ -12,17 +12,53 @@ h1 {
     flex-direction: column;
     width: 100%;
     height: 100%;
+    align-items: center;
+    justify-content: flex-end;
 }
 
-.loginBackground {
+.loginContent {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    flex:1;
-    background-color: colors.$grey;
+    z-index: 10;
+    padding-bottom: 15%;
 }
 
 .loginForm {
     display: block;
+}
+
+.loginBackground{
+    position:absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    background-color: colors.$grey;
+}
+
+.topLoginBackground {
+    flex:1;
+}
+
+.bottomBackground {
+    flex:1.3;
+    width: 100%;
+    background-color: colors.$darkerGrey;
+}
+
+.backgroundImage {
+    width: 70%;
+    bottom: 58%;
+    left: 14%;
+    position: absolute;
+}
+
+.wave {
+    display: flex;
+    overflow: hidden;
+    z-index: 5;
 }
