--- a/src/components/commons/ship.scss
+++ b/src/components/commons/ship.scss
@@ -4,8 +4,7 @@
     width: 240px;
     height: 40px;
     border: 2px solid;
-    border-color: colors.$green;
-    border-radius: 10%;
+    border-radius: 100%;
     z-index: 1000;
-    background-color: colors.$grey;
+    background-color: colors.$green;
 }
