--- a/src/components/commons/ship.scss
+++ b/src/components/commons/ship.scss
@@ -3,7 +3,8 @@
 .ship {
     width: 240px;
     height: 40px;
-    border-radius: 80%;
+    border-radius: 50%;
     z-index: 1000;
-    background-color: colors.$green;
+    border: 4px solid colors.$green;
+    background-color: colors.$grey;
 }
