--- a/src/components/commons/ship.scss
+++ b/src/components/commons/ship.scss
@@ -3,7 +3,7 @@
 .ship {
     width: 240px;
     height: 40px;
-    border-radius: 50%;
+    border-radius: 500px;
     z-index: 1000;
     border: 4px solid colors.$green;
     background-color: colors.$grey;
