--- a/src/components/commons/buttonStyle.scss
+++ b/src/components/commons/buttonStyle.scss
@@ -9,6 +9,10 @@ button {
     color: colors.$green;
     border-radius: 6px;
     cursor: pointer;
+
+    label {
+        cursor: pointer;
+    }
 }
 
 button:hover {
